fix: inputs nav overflow

--- a/src/plugin.scss
+++ b/src/plugin.scss
@@ -399,3 +399,7 @@ $toggle-orange: #ff9900;
 		}
 	}
 }
+
+.inputs-nav {
+	max-width: 90%;
+}
